# rust-postgres-api

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 20230101000000_create_users_table.sql
backend/src/: kafka.rs  main.rs
backend/src/config/: mod.rs
backend/src/crawler/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: crawler.rs  mod.rs  social.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
consumer/: Cargo.toml  Dockerfile  README.md
consumer/src/: main.rs
frontend/: Dockerfile  README.md  package-lock.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CrawlerForm.tsx  CrawlerResults.tsx  SocialCrawlerForm.tsx
frontend/src/pages/: CrawlerPage.tsx  SocialCrawlerPage.tsx
