[package]
name = "rust-postgres-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.5"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18.1"
url = "2.4.1"
thiserror = "1.0.50"
regex = "1.10.2"
html2text = "0.6.0"
rdkafka = { version = "0.36", features = ["tokio"] }
