[package]
name = "scrape-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.50"
cdrs-tokio = "8.1"
dotenv = "0.15"
tokio-stream = "0.1"
uuid = { version = "1.10", features = ["v4"] }